# perps-stats

./: .env.example  .gitignore  Cargo.toml  DATABASE_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  TUTORIALS.md  docker-compose.yml  exchanges.txt  schema.sql  symbol_aliases.toml  symbols.txt
crates/perps-aggregator/: Cargo.toml
crates/perps-aggregator/src/: aggregator.rs  lib.rs  types.rs
crates/perps-aggregator/tests/: liquidity_all.rs
crates/perps-core/: Cargo.toml
crates/perps-core/src/: lib.rs  orderbook_manager.rs  rate_limiter.rs  retry.rs  stream_manager.rs  streaming.rs  traits.rs  types.rs  utils.rs
crates/perps-database/: Cargo.toml
crates/perps-database/src/: db.rs  lib.rs  partitions.rs  repository.rs  stats.rs
crates/perps-database/src/parquet/: mod.rs  reader.rs  schema.rs  writer.rs
crates/perps-exchanges/: Cargo.toml
crates/perps-exchanges/src/: cache.rs  factory.rs  lib.rs  symbol_aliases.rs
crates/perps-exchanges/src/aster/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/binance/: client.rs  conversions.rs  error.rs  mod.rs  ticker_calculator.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/bybit/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/extended/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/gravity/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/hibachi/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/hotstuff/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/hyperliquid/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/kucoin/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/lighter/: client.rs  client.rs.bak  conversions.rs  mod.rs  models.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/nado/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/o1/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/pacifica/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/paradex/: client.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/qfex/: client.rs  conversions.rs  mod.rs  types.rs  ws_client.rs  ws_types.rs
crates/perps-exchanges/src/risex/: client.rs  conversions.rs  mod.rs  types.rs
crates/perps-exchanges/src/tradexyz/: client.rs  mod.rs
crates/perps-exchanges/tests/: gravity_comprehensive_tests.rs  gravity_integration_tests.rs  o1_integration_tests.rs  qfex_integration_tests.rs  risex_integration_tests.rs  symbol_parsing_tests.rs
docs/: DOCKER_DEPLOYMENT.md  FRESH_DB_SETUP.md  FRESH_SETUP.md  GRAFANA_LOCAL_SETUP.md  MIGRATIONS.md  api_server_deployment.md  architecture.md  deployment.md  explain_ticker_start.md  generate_schema.sh  kucoin_start.md  new_exchange_requirements.md
migrations/: 00_initial_schema.sql  01_add_orderbook_sizes.sql  01_add_unique_constraints.sql  02_add_hotstuff.sql  02_add_orderbook_best_prices.sql  03_add_exchange_fees.sql  03_add_hibachi.sql  04_add_qfex.sql  04_remove_fees_from_slippage.sql  05_add_nado_exchange.sql  05_add_tradexyz.sql  06_add_max_bps_columns.sql  06_add_risex.sql  07_add_gravity_exchange.sql  07_fix_risex_fees.sql  08_add_01_exchange.sql  08_spread_bps_float.sql  20251010000001_create_exchanges_and_markets.sql  20251010000002_create_timeseries_tables.sql  20251010000003_create_initial_partitions_and_indexes.sql  20251010000004_seed_exchanges.sql  20251013000001_create_slippage_table.sql  20251013000002_create_discovery_cache_table.sql
src/: cli.rs  main.rs
src/api/: api_docs.md  api_docs.yaml  index.html
src/commands/: backfill.rs  common.rs  db.rs  export.rs  import.rs  liq_dist.rs  liquidity.rs  market.rs  mod.rs  orderbook.rs  run.rs  serve.rs  start.rs  stats.rs  stream.rs  ticker.rs
src/commands/serve/: mod.rs  routes.rs  state.rs
src/commands/serve/api/: index.html
src/commands/serve/handlers/: exchanges.rs  funding_rates.rs  health.rs  klines.rs  liquidity.rs  mod.rs  orderbooks.rs  slippage.rs  symbols.rs  tickers.rs  trades.rs
src/commands/serve/middleware/: error.rs  mod.rs  rate_limit.rs
src/commands/serve/models/: requests.rs  responses.rs
src/commands/serve/rate_limiter/: backend.rs  config.rs  memory.rs  mod.rs  parser.rs
