[workspace]
members = [
    "crates/perps-core",
    "crates/perps-exchanges",
    "crates/perps-database",
    "crates/perps-aggregator",
]
resolver = "2"

[package]
name = "perps-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal precision
rust_decimal = "1.37"

# Date/time
chrono = "0.4"

# Table formatting
prettytable-rs = "0.10"

# CSV writing
csv = "1.3"

# Excel writing (for backward compatibility)
rust_xlsxwriter = "0.79"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Workspace crates
perps-core = { path = "crates/perps-core" }
perps-exchanges = { path = "crates/perps-exchanges" }
perps-database = { path = "crates/perps-database" }
perps-aggregator = { path = "crates/perps-aggregator" }

# Force older version of base64ct to avoid edition2024 requirement
base64ct = "=1.6.0"

[dev-dependencies]
tempfile = "3.10"
