[workspace]
members = [
    "crates/perps-core",
    "crates/perps-exchanges",
    "crates/perps-database",
    "crates/perps-aggregator",
]
resolver = "2"

[package]
name = "perps-stats"
version = "0.2.3"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal precision
rust_decimal = "1.37"

# Date/time
chrono = "0.4"

# Table formatting
prettytable-rs = "0.10"

# CSV writing
csv = "1.3"

# Excel writing (for backward compatibility)
rust_xlsxwriter = "0.79"

# Plotting
plotters = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "macros"], default-features = false }

# Arrow / Parquet (for orderbook CLI export command)
parquet = { version = "53", default-features = false, features = ["arrow", "zstd"] }

# Web server (for REST API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "fs"] }

# Workspace crates
perps-core = { path = "crates/perps-core" }
perps-exchanges = { path = "crates/perps-exchanges" }
perps-database = { path = "crates/perps-database" }
perps-aggregator = { path = "crates/perps-aggregator" }

[dev-dependencies]
tempfile = "3.10"
