[package]
name = "perps-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
perps-core = { path = "../perps-core" }

# Decimal precision
rust_decimal = "1.37"
rust_decimal_macros = "1.37"

# Date and time
chrono = "0.4"

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Concurrency
futures = "0.3"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt"] }
rust_decimal_macros = "1.37"
