[package]
name = "perps-exchanges"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
perps-core = { path = "../perps-core" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Async trait support
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Decimal and date/time (re-exported from core, but needed for conversions)
rust_decimal = "1.37"
chrono = "0.4"

# Async runtime
tokio = { version = "1.41", features = ["sync"] }

# Cache support
once_cell = "1.20"

[dev-dependencies]
rust_decimal_macros = "1.37"
